fixed whitespacing issues and made sure tests were passing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -15,3 +15,7 @@ tr.table_header { background-color: #f5f5f5; }
   width: 70%;
   margin: 0 auto;
 }
+
+.searchFloat {
+  float: right;
+}
